--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -3,52 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>main</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-    <!--    bootstrap dropdown -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
-
-
-
 </head>
 <body>
 <th:block th:replace="commonPages/header :: header"></th:block>
-<div th:if="${session.member.userId == 'admin'}">
-<a href="/item/save" class="btn-success">상품등록</a>
-</div>
+<!--bootstrap cdn-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
 
-<div class="btn">
-    <a th:href="@{/item/main(page=${page} ,sort='id' , size=${size})}" th:class="${sort.equals('id')} ? 'btn btn-default active' " class="btn btn-default">최신순</a>
-    <a th:href="@{/item/main(page=${page} ,sort='itemPrice' , size=${size})}"  th:class="${sort.equals('itemPrice')} ? 'btn btn-default active' " class="btn btn-default">낮은가격순</a>
-    <a th:href="@{/item/main(page=${page} ,sort='itemSellCount' , size=${size})}" th:class="${sort.equals('itemSellCount')} ? 'btn btn-default active' "   class="btn btn-default ">판매순</a>
-</div>
+<nav>
+    <div class="container">
+        <div class="btn-group">
+            <a th:href="@{/item/main(page=${page} ,sort='id' , size=${size})}"
+               th:style="${sort.equals('id')} ? 'color: red' " style="color: black">최신순</a>
+            <a th:href="@{/item/main(page=${page} ,sort='itemPrice' , size=${size})}"
+               th:style="${sort.equals('itemPrice')} ? 'color: red' "  style="color: black">낮은가격순</a>
+            <a th:href="@{/item/main(page=${page} ,sort='itemSellCount' , size=${size})}"
+               th:style="${sort.equals('itemSellCount')} ? 'color: red' "  style="color: black">판매순</a>
+        </div>
 
 
+        <!--정렬 버튼-->
+        <div class="btn-group dropdown" style="float: right">
+            <button type="button" class="dropdown-toggle active" data-bs-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="true" th:text="${size}+'개씩보기'">
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li th:class="${size == 1} ? 'dropdown-item active' " class="dropdown-item active"><a
+                        th:href="@{/item/main(page=1, size=5 , sort=${sort})}" class="dropdown-item">5개씩</a></li>
+                <li th:class="${size == 2} ? 'dropdown-item active' " class="dropdown-item active"><a
+                        th:href="@{/item/main(page=1, size=10 , sort=${sort})}" class="dropdown-item">10개씩</a></li>
+                <li th:class="${size == 3} ? 'dropdown-item active' " class="dropdown-item active"><a
+                        th:href="@{/item/main(page=1, size=20, sort=${sort})}" class="dropdown-item">20개씩</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<!--정렬 버튼-->
-<div class="btn-group dropdown">
-    <button type="button" class="btn btn-default dropdown-toggle active" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${size}+'개씩보기'">
-        <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu">
-        <li th:class="${size == 1} ? 'dropdown-item active' " class="dropdown-item active"> <a th:href="@{/item/main(page=1, size=1 , sort=${sort})}" class="dropdown-item">1개씩</a></li>
-        <li th:class="${size == 2} ? 'dropdown-item active' " class="dropdown-item active"> <a th:href="@{/item/main(page=1, size=2 , sort=${sort})}"  class="dropdown-item">2개씩</a></li>
-        <li th:class="${size == 3} ? 'dropdown-item active' " class="dropdown-item active"> <a th:href="@{/item/main(page=1, size=3, sort=${sort})}"  class="dropdown-item">3개씩</a></li>
-    </ul>
-</div>
 
-<!--상품-->
 <div class="container">
     <table class="table table-striped table-hover text-center mt-5">
-        <div th:each="item: ${itemList}">
-            <div>
-                <div class="item  col-xs-4 col-md-3">
+        <div>
+            <div th:each="item: ${itemList}">
+                <div class="item  col-xs-3 col-md-4">
                     <div class="thumbnail">
                         <div th:if="${item.fileAttachedItem == 1}">
                             <img th:src="@{|/upload/${item.storedFileNameItem.get(0)}}" alt="" width="200" height="150">
@@ -64,11 +62,15 @@
                         <div class="caption">
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
-                                    <p class="read"> <a th:href="@{/item/(itemId=${item.id})}" th:text="${item.itemName}"></a></p>
-                                    <div th:if="${session.member.userId == 'admin'}">
-                                    <button class="btn btn-warning" th:onclick="updateReq([[${item}]])">상품 수정</button>
-                                        <button class="btn btn-warning" th:onclick="deleteReq([[${item}]])">상품 삭제</button>
-                                        </div>
+                                    <p class="read"><a th:href="@{/item/(itemId=${item.id})}"
+                                                       th:text="${item.itemName}"></a></p>
+                                    <div th:if="${!session.isEmpty()} and ${session.member.userId} == 'admin' ">
+                                        <button class="btn btn-warning" th:onclick="updateReq([[${item}]])">상품 수정
+                                        </button>
+                                        <button class="btn btn-warning" th:onclick="deleteReq([[${item}]])">상품 삭제
+                                        </button>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -79,13 +81,11 @@
     </table>
 
 
-<div class="container">
-    <table class="table table-striped table-hover text-center mt-5">
 
-    </table>
-</div>
-
-    <div class="container">
+    <div class="container ">
+        <div th:if="${!session.isEmpty()} and ${session.member.userId} == 'admin' ">
+            <a href="/item/save" class="btn-success">상품등록</a>
+        </div>
         <ul class="pagination justify-content-center">
             <li class="page-item">
                 <!--첫페이지 요청 링크-->
@@ -97,7 +97,8 @@
             <li th:class="${itemList.first} ? 'disabled'" class="page-item">
                 <!--boardList.first: isFirst()
                     boardList.number: getNumber()-->
-                <a class="page-link" th:href="${itemList.first} ? '#' : @{/item/main(page=${itemList.number},sort=${sort},size=${size})}">
+                <a class="page-link"
+                   th:href="${itemList.first} ? '#' : @{/item/main(page=${itemList.number},sort=${sort},size=${size})}">
                     <span><</span> <!-- < -->
                 </a>
             </li>
@@ -105,7 +106,8 @@
             <!-- startPage ~ endPage 까지 숫자를 만들어주는 역할 -->
             <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
                 th:class="${page == itemList.number + 1} ? 'page-item active'" class="page-item">
-                <a class="page-link" th:text="${page}" th:href="@{/item/main(page=${page},sort=${sort},size=${size})}"></a>
+                <a class="page-link" th:text="${page}"
+                   th:href="@{/item/main(page=${page},sort=${sort},size=${size})}"></a>
             </li>
 
             <!-- 다음 페이지 요청
@@ -113,7 +115,8 @@
                 getNumber() 값은 2임.
                 따라서 4페이지를 보고 싶다면 getNumber()+2를 해야 컨트롤러에 4를 요청할 수 있음. -->
             <li th:class="${itemList.last} ? 'disabled'">
-                <a class="page-link" th:href="${itemList.last} ? '#' : @{/item/main(page=${itemList.number + 2},sort=${sort},size=${size})}">
+                <a class="page-link"
+                   th:href="${itemList.last} ? '#' : @{/item/main(page=${itemList.number + 2},sort=${sort},size=${size})}">
                     <span>&gt;</span>
                 </a>
             </li>
@@ -133,13 +136,13 @@
     const updateReq = (updateFn) => {
         console.log(updateFn);
         const id = updateFn.id;
-        location.href="/item/update/"+id;
+        location.href = "/item/update/" + id;
     }
     //상품 삭제
     const deleteReq = (deleteFn) => {
         console.log(deleteFn);
         const id = deleteFn.id;
-        location.href="/item/delete/"+id;
+        location.href = "/item/delete/" + id;
     }
 </script>
 </html>
